test/parse/module/bad-export-table-undefined.txt
;;; ERROR: 1
(module (export "foo" (table 0)))
(;; STDERR ;;;
out/test/parse/module/bad-export-table-undefined.txt:2:30: error: table variable out of range (max 0)
(module (export "foo" (table 0)))
                             ^
;;; STDERR ;;)
